; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/igb/extr_igb_main.c_igb_deliver_wake_packet.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/igb/extr_igb_main.c_igb_deliver_wake_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.igb_adapter = type { %struct.e1000_hw }
%struct.e1000_hw = type { i64 }
%struct.sk_buff = type { i32, i32 }

@E1000_WUPL = common dso_local global i32 0, align 4
@E1000_WUPL_MASK = common dso_local global i32 0, align 4
@E1000_WUPM_BYTES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @igb_deliver_wake_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @igb_deliver_wake_packet(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.igb_adapter*, align 8
  %4 = alloca %struct.e1000_hw*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %7 = load %struct.net_device*, %struct.net_device** %2, align 8
  %8 = call %struct.igb_adapter* @netdev_priv(%struct.net_device* %7)
  store %struct.igb_adapter* %8, %struct.igb_adapter** %3, align 8
  %9 = load %struct.igb_adapter*, %struct.igb_adapter** %3, align 8
  %10 = getelementptr inbounds %struct.igb_adapter, %struct.igb_adapter* %9, i32 0, i32 0
  store %struct.e1000_hw* %10, %struct.e1000_hw** %4, align 8
  %11 = load i32, i32* @E1000_WUPL, align 4
  %12 = call i32 @rd32(i32 %11)
  %13 = load i32, i32* @E1000_WUPL_MASK, align 4
  %14 = and i32 %12, %13
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %1
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @E1000_WUPM_BYTES, align 4
  %20 = icmp sgt i32 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %17, %1
  br label %52

22:                                               ; preds = %17
  %23 = load %struct.net_device*, %struct.net_device** %2, align 8
  %24 = load i32, i32* @E1000_WUPM_BYTES, align 4
  %25 = call %struct.sk_buff* @netdev_alloc_skb_ip_align(%struct.net_device* %23, i32 %24)
  store %struct.sk_buff* %25, %struct.sk_buff** %5, align 8
  %26 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %27 = icmp ne %struct.sk_buff* %26, null
  br i1 %27, label %29, label %28

28:                                               ; preds = %22
  br label %52

29:                                               ; preds = %22
  %30 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @skb_put(%struct.sk_buff* %30, i32 %31)
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @roundup(i32 %33, i32 4)
  store i32 %34, i32* %6, align 4
  %35 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %36 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.e1000_hw*, %struct.e1000_hw** %4, align 8
  %39 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = call i64 @E1000_WUPM_REG(i32 0)
  %42 = add nsw i64 %40, %41
  %43 = load i32, i32* %6, align 4
  %44 = call i32 @memcpy_fromio(i32 %37, i64 %42, i32 %43)
  %45 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %46 = load %struct.net_device*, %struct.net_device** %2, align 8
  %47 = call i32 @eth_type_trans(%struct.sk_buff* %45, %struct.net_device* %46)
  %48 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %49 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %48, i32 0, i32 0
  store i32 %47, i32* %49, align 4
  %50 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %51 = call i32 @netif_rx(%struct.sk_buff* %50)
  br label %52

52:                                               ; preds = %29, %28, %21
  ret void
}

declare dso_local %struct.igb_adapter* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @rd32(i32) #1

declare dso_local %struct.sk_buff* @netdev_alloc_skb_ip_align(%struct.net_device*, i32) #1

declare dso_local i32 @skb_put(%struct.sk_buff*, i32) #1

declare dso_local i32 @roundup(i32, i32) #1

declare dso_local i32 @memcpy_fromio(i32, i64, i32) #1

declare dso_local i64 @E1000_WUPM_REG(i32) #1

declare dso_local i32 @eth_type_trans(%struct.sk_buff*, %struct.net_device*) #1

declare dso_local i32 @netif_rx(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
